fixed footer and overflow issue

--- a/src/Styles/gameStyles/gamePage.css
+++ b/src/Styles/gameStyles/gamePage.css
@@ -1,12 +1,12 @@
 .game-page {
+    position: relative;
     width: 100%;
-    min-height: 100vh;
-    padding: 2rem 1rem;
+    height: 100%;     /* fill the entire screen */
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start; /* or center, or whatever you prefer */
     background-color: var(--purple);
-    justify-content: start;
 }
 
 .game-header {
@@ -80,9 +80,10 @@
     width: 100%;
 }
 
-/*TODO fix the footer to be not how it is */
 .footer {
-    position: relative;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 200px;
     border-radius: 60px 60px 0 0;
