--- a/src/index.css
+++ b/src/index.css
@@ -47,15 +47,22 @@
 	box-sizing: border-box;
 }
 
-html {
-	font-size: 16px;
+html,
+body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	/* If you want to disable scrolling altogether, add: */
+	overflow: hidden;
 }
+
 
 #root{
     background-color: var(--dark-purple);
-    max-width: 100%;
-	width: 100%;
 	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 body {
